--- a/商机转介/IPhone4MainStoryboard.storyboard
+++ b/商机转介/IPhone4MainStoryboard.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2QS-fx-Pau">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2QS-fx-Pau">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -1625,7 +1626,7 @@
             <objects>
                 <tabBarController definesPresentationContext="YES" id="ycg-fj-73e" customClass="TLTabBarController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="互动助手" id="2KG-4Z-mic">
-                        <barButtonItem key="rightBarButtonItem" title="Item" style="done" id="YjI-Up-sAf">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="YjI-Up-sAf">
                             <connections>
                                 <action selector="faxian:" destination="ycg-fj-73e" id="KR8-fc-OxF"/>
                             </connections>
